--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -107,7 +107,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: color.adjust($brand-color, $lightness: -15%);
+    color: adjust-color($brand-color, $lightness: -15%);
   }
 
   &:hover {
@@ -232,21 +232,21 @@ table {
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
-  color: color.adjust($text-color, $lightness: 18%);
+  color: adjust-color($text-color, $lightness: 18%);
   border-collapse: collapse;
   border: 1px solid $grey-color-light;
   tr {
     &:nth-child(even) {
-      background-color: color.adjust($grey-color-light, $lightness: 6%);
+      background-color: adjust-color($grey-color-light, $lightness: 6%);
     }
   }
   th, td {
     padding: ($spacing-unit * 0.3333333333) ($spacing-unit * 0.5);
   }
   th {
-    background-color: color.adjust($grey-color-light, $lightness: 3%);
-    border: 1px solid color.adjust($grey-color-light, $lightness: -4%);
-    border-bottom-color: color.adjust($grey-color-light, $lightness: -12%);
+    background-color: adjust-color($grey-color-light, $lightness: 3%);
+    border: 1px solid adjust-color($grey-color-light, $lightness: -4%);
+    border-bottom-color: adjust-color($grey-color-light, $lightness: -12%);
   }
   td {
     border: 1px solid $grey-color-light;
