--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,7 +2,7 @@
 ---
 
 /* Override Minima variables with your custom color palette */
-$background-color:   #ABB1CA; /* Lightest gray from your palette */
+$background-color:   #FDFAFB; /* Lightest gray from your palette */
 $text-color:         #22294B; /* Main text */
 $brand-primary:      #A6B5F5; /* Links and buttons */
 $brand-secondary:    #7E84A0; /* Hover states */
@@ -13,6 +13,24 @@ $highlight-color:    #A6B5F5; /* Highlights */
 @import "minima";
 
 /* Custom Styles */
+
+:root {
+  --shadow-color: 238deg 14% 35%;
+  --shadow-elevation-low:
+    -0.2px 0.1px 0.3px hsl(var(--shadow-color) / 0),
+    -1.2px 0.6px 2px hsl(var(--shadow-color) / 0.78);
+  --shadow-elevation-medium:
+    -0.2px 0.1px 0.3px hsl(var(--shadow-color) / 0),
+    -2.1px 1.1px 3.6px hsl(var(--shadow-color) / 0.49),
+    -6.1px 3.2px 10.3px hsl(var(--shadow-color) / 0.97);
+  --shadow-elevation-high:
+    -0.2px 0.1px 0.3px hsl(var(--shadow-color) / 0),
+    -4.9px 2.6px 8.3px hsl(var(--shadow-color) / 0.23),
+    -9.1px 4.8px 15.4px hsl(var(--shadow-color) / 0.45),
+    -14.7px 7.8px 25px hsl(var(--shadow-color) / 0.68),
+    -23.3px 12.4px 39.6px hsl(var(--shadow-color) / 0.9),
+    -36.7px 19.5px 62.3px hsl(var(--shadow-color) / 1);
+}
 
 /* Adjust the body */
 body {
@@ -51,15 +69,14 @@ h2 {
   border-radius: 4px;
   padding: 10px;
   width: 200px;
-  box-sizing: border-box;
-  /* Removed box-shadow for minimalistic design */
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-  /* Ensure all cards have the same height */
   height: 150px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* Applying shadow */
+  box-shadow: var(--shadow-elevation-medium);
 }
 
 /* Card headings */
