--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,8 +34,8 @@ $highlight-color:    #A6B5F5; /* Highlights */
 
 /* Adjust the body */
 body {
-  background-color: $background-color;
-  color: $text-color;
+  background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1124&q=100');
+  background-position: center;
 }
 
 /* Main heading */
@@ -77,6 +77,12 @@ h2 {
   align-items: center;
   /* Applying shadow */
   box-shadow: var(--shadow-elevation-medium);
+  /* Glassmorphism */
+  backdrop-filter: blur(11px) saturate(152%);
+  -webkit-backdrop-filter: blur(11px) saturate(152%);
+  background-color: rgba(17, 25, 40, 0.44);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 /* Card headings */
@@ -98,6 +104,10 @@ h2 {
   border-radius: 4px;
   transition: background-color 0.3s;
   font-size: 14px;
+}
+
+.card:hover {
+  box-shadow: var(--shadow-elevation-low);
 }
 
 .card a:hover {
