--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,8 +34,9 @@ $highlight-color:    #A6B5F5; /* Highlights */
 
 /* Adjust the body */
 body {
-  background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1124&q=100');
-  background-position: center;
+  background: url('{{ "/assets/images/snow-mountain.jpeg" | relative_url }}') no-repeat center center fixed;
+  background-size: cover; /* Ensures the image covers the entire background */
+  color: $text-color;
 }
 
 /* Main heading */
