--- a/assets/main.scss
+++ b/assets/main.scss
@@ -96,7 +96,7 @@ h2 {
 
 /* Card headings */
 .card h3 {
-  margin: 0;
+  margin: 0 0 10px 0; /* Add bottom margin for spacing */
   color: $text-color;
   font-size: 18px;
   text-align: center;
