--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 
 /* Override Minima variables with your custom color palette */
 $background-color:   #FDFAFB; /* Lightest gray from your palette */
-$text-color:         #22294B; /* Main text */
+$text-color:         #FFFFFF; /* Main text */
 $brand-primary:      #A6B5F5; /* Links and buttons */
 $brand-secondary:    #7E84A0; /* Hover states */
 $border-color:       #495175; /* Borders and lines */
@@ -15,7 +15,7 @@ $highlight-color:    #A6B5F5; /* Highlights */
 /* Custom Styles */
 
 :root {
-  --shadow-color: 238deg 14% 35%;
+  --shadow-color: 0deg 0% 35%;
   --shadow-elevation-low:
     -0.2px 0.1px 0.3px hsl(var(--shadow-color) / 0),
     -1.2px 0.6px 2px hsl(var(--shadow-color) / 0.78);
@@ -34,8 +34,9 @@ $highlight-color:    #A6B5F5; /* Highlights */
 
 /* Adjust the body */
 body {
-  background: url('{{ "/assets/images/snow-mountain.jpg" | relative_url }}') no-repeat center center fixed;
-  background-size: cover; /* Ensures the image covers the entire background */
+  background-color: #1a1a1a;
+  /* background: url('{{ "/assets/images/escher.jpg" | relative_url }}') no-repeat center center fixed; */
+  background-size: cover;
   color: $text-color;
 }
 
@@ -67,7 +68,6 @@ h2 {
 .card {
   /* Remove the first background-color, border, and border-radius */
   /* Use the desired background properties */
-  background-color: rgba(17, 25, 40, 0.44); /* Glassmorphism background */
   border: 1px solid rgba(255, 255, 255, 0.125);
   border-radius: 12px;
   padding: 10px;
@@ -78,11 +78,12 @@ h2 {
   flex-direction: column;
   align-items: center; /* Center content horizontally */
   justify-content: center; /* Center content vertically */
-  box-shadow: var(--shadow-elevation-medium);
+  box-shadow: var(--shadow-elevation-low);
   transition: box-shadow 0.3s ease-in-out;
   /* Glassmorphism effect */
-  backdrop-filter: blur(7px) saturate(117%);
+  backdrop-filter: blur(3px) saturate(117%);
   -webkit-backdrop-filter: blur(7px) saturate(117%);
+  background-color: rgba(17, 25, 40, 0.21);
 }
 
 /* Fix the position of the content to ensure alignment */
@@ -107,7 +108,7 @@ h2 {
   display: inline-block;
   margin-top: 10px;
   padding: 5px 10px;
-  background-color: $brand-primary;
+  background-color: $brand-secondary;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
@@ -117,7 +118,7 @@ h2 {
 }
 
 .card:hover {
-  box-shadow: var(--shadow-elevation-low);
+  box-shadow: var(--shadow-elevation-medium);
 }
 
 .card a:hover {
