--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html lang="{{ site.lang | default: 'en-US' }}">
 <head>
+    <!-- Head.html is loaded -->
   <meta charset="utf-8">
   <title>{{ page.title | escape }} | {{ site.title | escape }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Manda o internet explorer usar a versão mais atual -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Google Tag Manager -->
   <script>
@@ -15,6 +19,15 @@
   </script>
   <!-- End Google Tag Manager -->
 
+  <!-- Usa o tema jekyll minima -->
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
-  <!-- Other head elements -->
+
+  <!-- Font Awesome CDN -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-pfpxF4I0UVvbxVgZc3V6sUw6EoJxUG5PNv6cCIL1hgB2L1Fq8eS27m3Kz8VRw1lBtVgB57jhC3+aEjkWfV4RvQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
