--- a/assets/main.scss
+++ b/assets/main.scss
@@ -114,7 +114,7 @@ section h2 {
   justify-content: flex-start; /* Start from the top */
 
   box-shadow: var(--shadow-elevation-low);
-  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, background-color 2.7s ease-in-out;;
 
   /* Glassmorphism effect */
   backdrop-filter: blur(5px) saturate(120%);
@@ -122,6 +122,7 @@ section h2 {
   background-color: rgba(165, 169, 180, 0.25); /* Slightly opaque for better contrast */
 
   height: 200px; /* Set a fixed height to ensure all cards are the same size */
+
 }
 
 /* Specific styling for coming soon cards */
@@ -184,6 +185,7 @@ section h2 {
 
 .card:hover {
   box-shadow: var(--shadow-elevation-medium);
+  background-color: var(--card-hover-color); // Hover effect
 }
 
 .card a:hover {
